# double_dot_macro

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
