[package]
name = "double_dot_macro"
version = "0.3.0"
edition = "2021"
authors = ["doubledotinteractive@gmail.com"]
description = "Macros for the Double-Dot crate ecosystem"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "bevy"]
homepage = "https://github.com/Double-Dot-Interactive/double_dot_macro"
repository = "https://github.com/Double-Dot-Interactive/double_dot_macro.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.1"
# double_dot_macro_derive = { path = "double_dot_macro_derive"}
double_dot_macro_derive = "0.2.0"
# double_dot_macro_types = { path = "double_dot_macro_types"}
double_dot_macro_types = "0.1.0"
quote = "1.0.33"
syn = "2.0.43"

[lib]
path = "src/lib.rs"
